data/all_generated_tests/raw_wast_tests/nop_IncorrectBranchTargetResolution_1.wast
;; 2. **Test Description: `br_if` with Conditional Branching and `nop`**    - **Scenario**: Use `br_if` to conditionally branch based on a value on the stack, alongside `nop` within the same block.    - **Constraint**: Verifies if `nop` disrupts conditional branching where the target label should remain unchanged.    - **Context**: Incorrect label resolution can divert the branch to an unintended target, depending on the stack state.

(assert_invalid
  (module
    (func (block
      (i32.const 0)
      (br_if 0 (i32.const 1))
      (nop)
      (i32.const 1)
      (br_if 0 (i32.const 1))
    )))
  "type mismatch"
)